--- a/presentation.tex
+++ b/presentation.tex
@@ -10,6 +10,7 @@
 \usepackage{amsmath}
 \usepackage{bbm}
 \usepackage{pstricks}
+\usepackage{ulem}
 		
 \usetheme{Madrid}
 \useinnertheme{rectangles}
@@ -36,12 +37,56 @@
 	\end{frame}
 	
 	\section{Présentation}
+	\subsection{Problème classique}
 	\begin{frame}
 		\frametitle{Présentation}
-		Enfin, le texte ! :)
+		\framesubtitle{Problème classique}
+		\begin{itemize}
+			\item volume de données de plus en plus importants
+			\item accès à l'information $\rightarrow$ \textbf{efficacité}(Temps et coût)
+		\end{itemize}
+		\begin{figure}[!htbp]
+			\includegraphics[width=3cm]{image1.eps}
+			\includegraphics[width=6cm]{image2.eps}
+			\includegraphics[width=3cm]{image.eps}
+		\end{figure}		
+	\end{frame}
+	
+	\subsection{Nos solutions}
+	\begin{frame}
+		\frametitle{Présentation}
+		\framesubtitle{Nos solutions}	
+		\begin{itemize}
+			\item Approche: Filtre de Bloom
+			\item \sout{Méthode d'accès FreeCore: Indexation(Listes inversées)}
+			\item Méthode d'accès: Indexation(Vecteur d'approximation)
+		\end{itemize}
 	\end{frame}
 
 	\section{Filtre de Bloom}
+	\begin{frame}
+		\frametitle{Filtre de Bloom}
+		\begin{table}[!h]
+		\centering		
+		\begin{tabular}{|l|*{14}{c|}r|}
+		\multicolumn{1}{c}{{\scriptsize 15}} &\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{{\scriptsize 0}}\\
+		\hline
+			1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+		\hline
+		\end{tabular}
+		\caption{Filtre de Bloom}
+	\end{table}	
+	\end{frame}	
+	
+	\begin{frame}[shrink]
+		\frametitle{Filtre de Bloom}
+		\begin{figure}[!htbp]
+			\centering
+			\includegraphics[width=10cm]{ismember.eps}
+			\caption{isMember?}
+		\end{figure}	
+	\end{frame}	
+	
 	\subsection{Insertion}
 	\begin{frame}[shrink]
 		\frametitle{Filtre de Bloom}
@@ -64,21 +109,6 @@
 	\end{framed}
 	\end{frame}
 	
-	\begin{frame}
-		\frametitle{Filtre de Bloom}
-		\framesubtitle{Exemple d'insertion}
-		Par exemple, supposons que nous souhaitions ajouter la clé "computer" dans la table B de taille 16 bits, que nous ayons 4 fonctions de hachage $ h_i, 0 \leq i < 4 $ et que $ h_0("computer") = 3$, $ h_1("computer") = 8$, $ h_2("computer") = 15$, $h_3("computer") = 10$, $h_4("computer") = 11 $. Donc, l'état de la table $ B $ après l'insertion sera:
-	\begin{table}[!h]
-		\centering		
-		\begin{tabular}{|l|*{14}{c|}r|}
-		\multicolumn{1}{c}{{\scriptsize 15}} &\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{{\scriptsize 0}}\\
-		\hline
-			1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
-		\hline
-		\end{tabular}
-		\caption{Exemple filtre de Bloom}
-	\end{table}
-	\end{frame}
 	\subsection{Recherche}
 	\begin{frame}[shrink]
 		\frametitle{Filtre de Bloom}
@@ -105,27 +135,35 @@
 	\end{framed}
 	\end{frame}
 	
-	\begin{frame}[shrink]
+	\subsection{Exemple}
+	\begin{frame}
 		\frametitle{Filtre de Bloom}
-		\framesubtitle{Exemple de recherche}
+		\framesubtitle{Exemple}
 		\begin{figure}[!htbp]
-	\centering
-	\includegraphics[width=10cm]{ismember.eps}
-	\caption{isMember?}
-\end{figure}	
-
+			\centering
+			\includegraphics[width=12cm]{exemple1.eps}
+		\end{figure}	
 	\end{frame}
 	
-	\section{Réalisation du travail}
 	\begin{frame}
-		\frametitle{Réalisation du travail}	
+		\frametitle{Filtre de Bloom}
+		\framesubtitle{Approche d'indexation avec le filtre de Bloom}
+		\begin{figure}[!htbp]
+			\centering
+			\includegraphics[width=13cm]{exemple2.eps}
+		\end{figure}	
+	\end{frame}
+	
+	\begin{frame}
+		\frametitle{Filtre de Bloom}
+		\framesubtitle{Approche de vecteur approché}
+		\begin{figure}[!htbp]
+			\centering
+			\includegraphics[width=12cm]{exemple3.eps}
+		\end{figure}	
 	\end{frame}
 	
 	\section{Algorithme des fonctions}
-	\begin{frame}
-		\frametitle{Algorithme des fonctions}
-	\end{frame}
-	
 	\subsection{CREATE\_FILTER}
 	\begin{frame}[shrink]
 		\frametitle{Algorithme des fonctions}
@@ -276,6 +314,12 @@
 	\begin{frame}
 		\frametitle{Résultat de test}
 		\framesubtitle{Contexte de test}
+		\begin{itemize}
+			\item 107 459 documents
+			\item 319 720 fichiers générés
+			\item Filtre de Bloom de taille 512 bits
+			\item SHA\_256
+		\end{itemize}
 	\end{frame}
 	
 	\subsection{Recherche aléatoire}
@@ -344,3 +388,19 @@
 		\end{center}
 	\end{frame}
 \end{document}
+
+\begin{frame}
+		\frametitle{Filtre de Bloom}
+		\framesubtitle{Exemple d'insertion}
+		Par exemple, supposons que nous souhaitions ajouter la clé "computer" dans la table B de taille 16 bits, que nous ayons 4 fonctions de hachage $ h_i, 0 \leq i < 4 $ et que $ h_0("computer") = 3$, $ h_1("computer") = 8$, $ h_2("computer") = 15$, $h_3("computer") = 10$, $h_4("computer") = 11 $. Donc, l'état de la table $ B $ après l'insertion sera:
+	\begin{table}[!h]
+		\centering		
+		\begin{tabular}{|l|*{14}{c|}r|}
+		\multicolumn{1}{c}{{\scriptsize 15}} &\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{{\scriptsize 0}}\\
+		\hline
+			1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
+		\hline
+		\end{tabular}
+		\caption{Exemple filtre de Bloom}
+	\end{table}
+	\end{frame}
