--- a/presentation.tex
+++ b/presentation.tex
@@ -319,6 +319,7 @@
 			\item 319 720 fichiers générés
 			\item Filtre de Bloom de taille 512 bits
 			\item SHA\_256
+			\item 6 niveaux index
 		\end{itemize}
 	\end{frame}
 	
